Added Test and Few More Functions

--- a/rentals/templates/base.html
+++ b/rentals/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <title>{% block title %}Book Rental System{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
@@ -11,9 +12,15 @@
         <h1>Book Rental System</h1>
         <nav>
             <ul>
-                <li><a href="{% url 'start_rental' %}">Start Rental</a></li>
-                {% if user.is_authenticated %}
-                    <li><a href="{% url 'student_rentals' user_id=user.id %}">My Rentals</a></li>
+
+                {% if user.is_staff %}
+                    <li><a href="{% url 'start_rental' %}">Start Rental</a></li>
+                    <li><a href="{% url 'student_rentals' %}">All Rentals</a></li>
+                    <li><a href="{% url 'rental_report' %}">Rental Report</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+
+                {% elif user.is_authenticated %}
+                    <li><a href="{% url 'student_rentals' %}">My Rentals</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'login' %}">Login</a></li>
@@ -29,5 +36,10 @@
     <footer>
         <p>&copy; 2024 Book Rental System</p>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </body>
 </html>
