--- a/rentals/templates/login.html
+++ b/rentals/templates/login.html
@@ -1,13 +1,40 @@
-<!-- rentals/templates/login.html -->
 {% extends 'base.html' %}
 
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h1>Login</h1>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+<style>
+    .login-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.login-form {
+    width: 300px; /* Adjust width as needed */
+    margin: 0 auto; /* Center horizontally */
+}
+
+.error-message {
+    color: red;
+}
+
+.additional-options {
+    margin-top: 10px;
+}
+</style>
+
+<div class="login-container">
+    <h2>Login</h2>
+    <form method="post" class="login-form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        {% if form.errors %}
+            <p class="error-message">Invalid username or password. Please try again.</p>
+        {% endif %}
+        <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+</div>
 {% endblock %}
