--- a/rentals/templates/student_rentals.html
+++ b/rentals/templates/student_rentals.html
@@ -5,8 +5,8 @@
 {% block content %}
 <div class="container my-4">
     {% if grouped_rentals %}
-        {% for user, rentals in grouped_rentals.items %}
-            <h1 class="mb-4">Rentals for {{ user.username }}</h1>
+        {% for rental_user, rentals in grouped_rentals.items %}
+            <h1 class="mb-4">Rentals for {{ rental_user.username }}</h1>
             <div class="row">
                 {% for rental in rentals %}
                     <div class="col-md-6 col-lg-4 mb-4">
@@ -18,9 +18,11 @@
                                     <strong>End Date:</strong> {{ rental.end_date }}<br>
                                     <strong>Fee:</strong> ${{ rental.calculate_fee }}
                                 </p>
+                                {% if user.is_staff %}
                                 <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#extendRentalModal-{{ rental.id }}">
                                     Extend Rental
                                 </button>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
