Last Modifications and Error Updates

--- a/rentals/templates/base.html
+++ b/rentals/templates/base.html
@@ -33,7 +33,7 @@
         {% block content %}
         {% endblock %}
     </main>
-    <footer>
+    <footer style="bottom: -20px;">
         <p>&copy; 2024 Book Rental System</p>
     </footer>
 
