--- a/rentals/templates/register.html
+++ b/rentals/templates/register.html
@@ -60,15 +60,27 @@
         {% csrf_token %}
         {{ form.username.label_tag }}
         {{ form.username }}
+        {% if form.username.errors %}
+            <p class="error-message">{{ form.username.errors }}</p>
+        {% endif %}
         <br>
         {{ form.email.label_tag }}
         {{ form.email }}
+        {% if form.email.errors %}
+            <p class="error-message">{{ form.email.errors }}</p>
+        {% endif %}
         <br>
         {{ form.password1.label_tag }}
         {{ form.password1 }}
+        {% if form.password1.errors %}
+            <p class="error-message">{{ form.password1.errors }}</p>
+        {% endif %}
         <br>
         {{ form.password2.label_tag }}
         {{ form.password2 }}
+        {% if form.password2.errors %}
+            <p class="error-message">{{ form.password2.errors }}</p>
+        {% endif %}
         <br>
         <button type="submit">Register</button>
     </form>
